NetBSD Problem Report #58061

From www@netbsd.org  Thu Mar 21 21:12:23 2024
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 6B7921A9239
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 21 Mar 2024 21:12:23 +0000 (UTC)
Message-Id: <20240321211221.C677C1A923A@mollari.NetBSD.org>
Date: Thu, 21 Mar 2024 21:12:21 +0000 (UTC)
From: vezhlys@gmail.com
Reply-To: vezhlys@gmail.com
To: gnats-bugs@NetBSD.org
Subject: sysinst partitioning duplicates first partition values to the manually added second partition
X-Send-Pr-Version: www-1.0

>Number:         58061
>Category:       install
>Synopsis:       sysinst partitioning duplicates first partition values to the manually added second partition
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 21 21:15:00 +0000 2024
>Closed-Date:    Mon Mar 25 08:54:56 +0000 2024
>Last-Modified:  Mon Mar 25 08:54:56 +0000 2024
>Originator:     Andrius V
>Release:        NetBSD 10 RC6 amd64
>Organization:
>Environment:
>Description:
Hi,

Today I was installing NetBSD 10 RC6 on my new amd64 system and noticed and erratic behaviour with the partitioning gpt partitions if "Use default partition sizes" option was selected. If the first (root) partition is resized (which initially takes full available space before "swap") and second one is added, after clicking OK a and b partitions will show exactly same values for partition starting point, size, fs type. Flags and mounting point may differ. Trying to change first or second again, will likely affect both, maybe except flags (which may depend on the flags selected). Adding third one will have the same issue as well.


>How-To-Repeat:
Steps to reproduce:
Install NetBSD to hard disk
Shall we continue -> Yes
Available disks -> wd0
Choose Guid Partition Table (GPT) for partitioning scheme
What would you like to do? -> b: Use default partition sizes
Resize partition a too a smaller size -> OK
Add a partition -> should show correct start value and size after partition a -> click OK
Partition a and b will show same values in the partition table for at least start/end/size and fs type, flags and mount point may differ but changing those will behave erratically if changed.
Trying to edit partition b still will show partition a values and editing it will edit "both".

Adding "third" partition will have similar issue.
>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: install-manager->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Fri, 22 Mar 2024 18:37:52 +0000
Responsible-Changed-Why:
my bug


State-Changed-From-To: open->pending-pullups
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 24 Mar 2024 17:34:17 +0000
State-Changed-Why:
Fixed in -current, [pullup-10 #645]


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58061 CVS commit: src/usr.sbin/sysinst
Date: Sun, 24 Mar 2024 17:29:58 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sun Mar 24 17:29:58 UTC 2024

 Modified Files:
 	src/usr.sbin/sysinst: gpt.c

 Log Message:
 PR 58061: fix bug in the GPT backend: when inserting a partition
 (i.e. not adding it at the end) a bogus ID was returned for the new
 partition.


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.32 src/usr.sbin/sysinst/gpt.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58061 CVS commit: [netbsd-10] src/usr.sbin/sysinst
Date: Sun, 24 Mar 2024 20:27:04 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Mar 24 20:27:04 UTC 2024

 Modified Files:
 	src/usr.sbin/sysinst [netbsd-10]: gpt.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #645):
 	usr.sbin/sysinst/gpt.c: revision 1.32
 PR 58061: fix bug in the GPT backend: when inserting a partition
 (i.e. not adding it at the end) a bogus ID was returned for the new
 partition.


 To generate a diff of this commit:
 cvs rdiff -u -r1.30 -r1.30.2.1 src/usr.sbin/sysinst/gpt.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Mon, 25 Mar 2024 08:54:56 +0000
State-Changed-Why:
pullups complete


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.