Pull up following revision(s) (requested by martin in ticket #645): 	usr.sbin/sysinst/gpt.c: revision 1.32 PR 58061: fix bug in the GPT backend: when inserting a partition (i.e. not adding it at the end) a bogus ID was returned for the new partition.